# geo-hazard

./: .dockerignore  .env.example  .gitignore  .importlinter  Dockerfile  LICENSE  README.md  alembic.ini  compose.yml  docker-compose.yml  log_config.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/analytics/: concurrency.py  engine.py  paths.py
app/analytics/api/: __init__.py  analytics.py
app/analytics/queries/: earthquakes.py  warnings.py  wildfires.py
app/analytics/schemas/: earthquakes.py  warnings.py  wildfires.py
app/analytics/use_cases/: burned_area.py  earthquake_frequency.py  warnings_summary.py
app/api/v1/: __init__.py  health.py  sources.py
app/core/: concurrency.py  config.py  db.py  db_registry.py  http.py  logging.py  rate_limit.py  repo.py  schema.py  startup.py
app/core/aemet/: driver.py  exceptions.py  parser.py  registry.py  types.py
app/core/effis/: driver.py  exceptions.py  parser.py  registry.py  types.py
app/core/events/: bus.py  dispatcher.py  models.py  worker.py
app/core/exceptions/: __init__.py  exceptions.py  handlers.py
app/core/ign/: driver.py  exceptions.py  parser.py  registry.py  types.py
app/core/jobs/: models.py  registry.py  worker.py
app/hazards/api/: __init__.py  events.py
app/hazards/event_handlers/: export_geoparquet.py
app/hazards/models/: __init__.py  hazard_event.py  sync_state.py
app/hazards/repos/: hazard_event.py  sync_state.py
app/hazards/schemas/: clusters.py  events.py  sources.py
app/hazards/services/: content_hash.py  (+3 more)
data/reference/: provinces_es.parquet
docs/: deploy.md  sources.md
docs/adr/: 0001-data-sources.md  0002-postgres-native-jobs-and-outbox.md  0003-layered-architecture-import-linter.md  0004-unified-hazard-events-table.md  0005-crs-store-4326-project-25830.md  0006-geojson-featurecollection-responses.md  0007-geoparquet-snapshots-from-first-ingest.md  0008-content-hash-upserts-and-sync-cursor.md  0009-severity-normalization.md  0010-aemet-warning-lifecycle.md  0011-metric-queries-prefilter-refine-dbscan.md  0012-analytics-plane-reads-only-geoparquet.md  0013-committed-cnig-provinces-reference.md  0014-push-to-deploy-restricted-ssh-key.md  0015-effis-http-adapter-gwis-mapfile.md  0016-event-lifecycle-active-semantics.md  0017-api-availability-defenses.md  0018-backups-and-disaster-recovery.md  0019-operational-observability.md  README.md
migrations/: env.py
migrations/versions/: 04ddf0041d06_indice_de_soporte_del_cursor_keyset.py  33f6ed83d472_siembra_jobs_ign_y_aemet.py  4a7755cba66d_hazard_events_y_estado_de_sincronizacion.py  649b55b28ba3_esquema_inicial.py  b7e3d1a9c204_ventana_de_eventos_puntuales.py
ops/: backup.sh  check-sources.sh  deploy.sh  restore.sh
ops/systemd/: geohazard-backup.service  geohazard-backup.timer
scripts/: build_provinces_reference.py  check-coverage-targets.sh
tests/: conftest.py
tests/integration/: conftest.py  test_analytics_api.py  test_effis_pipeline.py  test_events_api.py  test_exactly_once.py  test_ign_aemet_sync.py  test_job_handlers.py  test_job_worker.py  test_metric_queries.py  test_outbox_worker.py  test_sources_status.py  test_upsert_chunking.py
tests/unit/: test_app_smoke.py  test_health_readiness.py  test_lifespan.py  test_metrics.py
(+52 files in other folders)
